@@ -163,6 +163,8 @@ o New control file dkimkeys to override DKIMKEY and allow domain specfic
     caller
 - 05/09/2021
 86. changed permissions for dirs with 555 to 755
+- 10/09/2021
+87. smtpd.c: removed setting of SPFRESULT env variable
 
 * 
 Release 2.13 Start 14/02/2021
